update api and routes
